@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,17 +18,18 @@
  */
 package org.apache.pulsar.common.intercept;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.Set;
 import org.apache.pulsar.common.util.ClassLoaderUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 /**
  * A tool class for loading BrokerEntryMetadataInterceptor classes.
  */
-public class BrokerEntryMetadataUtils {
+public class BrokerEntryMetadataUtils<T> {
 
     private static final Logger log = LoggerFactory.getLogger(BrokerEntryMetadataUtils.class);
 
@@ -41,14 +42,39 @@ public class BrokerEntryMetadataUtils {
                     Class<BrokerEntryMetadataInterceptor> clz = (Class<BrokerEntryMetadataInterceptor>) ClassLoaderUtils
                             .loadClass(interceptorName, classLoader);
                     try {
-                        interceptors.add(clz.newInstance());
-                    } catch (InstantiationException | IllegalAccessException e) {
+                        interceptors.add(clz.getDeclaredConstructor().newInstance());
+                    } catch (InstantiationException | IllegalAccessException
+                            | InvocationTargetException | NoSuchMethodException e) {
                         log.error("Create new BrokerEntryMetadataInterceptor instance for {} failed.",
                                 interceptorName, e);
                         throw new RuntimeException(e);
                     }
                 } catch (ClassNotFoundException e) {
                     log.error("Load BrokerEntryMetadataInterceptor class for {} failed.", interceptorName, e);
+                    throw new RuntimeException(e);
+                }
+            }
+        }
+        return interceptors;
+    }
+    public static <T> Set<T> loadInterceptors(
+            Set<String> interceptorNames, ClassLoader classLoader) {
+        Set<T> interceptors = new LinkedHashSet<>();
+        if (interceptorNames != null && interceptorNames.size() > 0) {
+            for (String interceptorName : interceptorNames) {
+                try {
+                    Class<T> clz = (Class<T>) ClassLoaderUtils
+                        .loadClass(interceptorName, classLoader);
+                    try {
+                        interceptors.add(clz.getDeclaredConstructor().newInstance());
+                    } catch (InstantiationException | IllegalAccessException
+                        | InvocationTargetException | NoSuchMethodException e) {
+                        log.error("Create new instance for {} failed. Exception is {}",
+                            interceptorName, e);
+                        throw new RuntimeException(e);
+                    }
+                } catch (ClassNotFoundException e) {
+                    log.error("Load class for {} failed. Exception is {}", interceptorName, e);
                     throw new RuntimeException(e);
                 }
             }
